--- a/clear.cfg
+++ b/clear.cfg
@@ -1,9 +1,9 @@
-// clean class specific bindings
+// Clean class specific bindings
 
-// redo scout
+// Undo scout
 bind "mouse1" "+attack"
 
-// redo medic,soldier,scout
+// Undo medic, soldier, scout, heavy
 bind "mouse2" "+attack2"
 
 // panicmelee for all classes and switch to last weapon
@@ -11,13 +11,13 @@ alias "+panicmelee" "slot3;+attack"
 alias "-panicmelee" "-attack;lastinv"
 bind "mouse3" "+panicmelee"
 
-// redo medic,soldier,engineer,spy,scout,heavy
+// Undo engineer, heavy, medic, pyro, scout, sniper, soldier, spy
 unbind "mouse5"
 
-// medic
+// Undo medic
 unbind "backspace"
 
-// engineer,sniper
+// Undo engineer, sniper
 unbind "alt"
 
 echo "BINDS CLEARED"
