--- a/heavyweapons.cfg
+++ b/heavyweapons.cfg
@@ -9,3 +9,9 @@ alias "startmachine" "-attack;+duck;+attack;alias machinemode stopmachine"
 alias "stopmachine" "-attack;-duck;alias machinemode startmachine"
 alias "machinemode" "startmachine"
 bind "mouse5" "machinemode"
+
+// Machine Mode modified for toggling autospin
+alias "startmachine" "+attack2;alias machinemode stopmachine"
+alias "stopmachine" "-attack2;alias machinemode startmachine"
+alias "machinemode" "startmachine"
+bind "mouse2" "machinemode"
