--- a/pyro.cfg
+++ b/pyro.cfg
@@ -3,14 +3,17 @@ exec clear
 // say_team "=== Pyro config loaded! ==="
 echo "=== Pyro config loaded! ==="
 
-// did not test this
-// http://tf2wiki.net/wiki/Pyro_scripts#Auto-Flamer_Weapon_Switch.2FFlambe.60
-//alias +toggleburn "+flame"
-//alias -toggleburn "-flame"
-//alias toggle "stop"
-//alias start "alias toggle stop; alias -toggleburn -flame"
-//alias stop "alias toggle start; alias -toggleburn -stop1"
-//alias +flame "slot1"
-//alias -flame "+attack;toggle"
-//alias -stop1 "-attack;toggle"
-//bind "mouse5" "+toggleburn"
+// Machine Mode from heavy, without crouching
+alias "startmachine" "-attack;+attack;alias machinemode stopmachine"
+alias "stopmachine" "-attack;alias machinemode startmachine"
+alias "machinemode" "startmachine"
+bind "mouse5" "machinemode"
+
+// http://tf2wiki.net/wiki/Pyro_scripts#Wait-independent_Quick-Axtinguish
+// Quick Axtinguish, untested
+//alias melee1 "slot1;+attack"
+//alias melee2 "slot3;+attack; alias -meleekill melee3"
+//alias melee3 "-attack;slot1; alias -meleekill melee2"
+//alias "+meleekill" "melee1"
+//alias "-meleekill" "melee2"
+//bind "SHIFT" "+meleekill"
