--- a/spy.cfg
+++ b/spy.cfg
@@ -5,7 +5,7 @@ echo "=== Spy config loaded! ==="
 
 
 // http://tf2wiki.net/wiki/Spy_scripts#Auto_Sapper
-// autosap+last weapon
+// Autosap on hold and switch back to last weapon
 alias "+autosap" "slot2;+attack"
 alias "-autosap" "-attack;lastinv"
 bind "mouse5" "+autosap"
