--- a/engineer.cfg
+++ b/engineer.cfg
@@ -13,11 +13,8 @@ alias +quickbuild "bind 1 e1;bind 2 e2;bind 3 e3;bind 4 e4; echo Sentry:1 Dispen
 alias -quickbuild "bind 1 slot1;bind 2 slot2;bind 3 slot3;bind 4 slot4;"
 bind "alt" "+quickbuild"
 
-
-// did not get it to work, toggle stop not working
-// http://tf2wiki.net/wiki/Engineer_scripts#Improved_Auto-Repair
-//Auto repair
-//alias "+autorepair" "-attack;slot3"
-//alias "-autorepair" "+attack;bind mouse5 stop" 
-//alias "stop" "-attack;bind mouse5 +autorepair"
-//bind "mouse5" "+autorepair"
+// Machine Mode from Heavy modified to autorepair
+alias "startmachine" "-attack;slot3;+attack;alias machinemode stopmachine"
+alias "stopmachine" "-attack;lastinv;alias machinemode startmachine"
+alias "machinemode" "startmachine"
+bind "mouse5" "machinemode"
