--- a/scout.cfg
+++ b/scout.cfg
@@ -3,15 +3,15 @@ exec clear
 // say_team "=== Scout config loaded! ==="
 echo "=== Scout config loaded! ==="
 
-// quick scattergun 
+// Quick scattergun 
 alias "+scatter" "slot1;+attack"
 alias "-scatter" "-attack"
 
-// quick pistol 
+// Quick pistol 
 alias "+pistol" "slot2;+attack"
 alias "-pistol" "-attack"
 
-// quick melee 
+// Quick melee 
 alias "+bat" "slot3;+attack"
 alias "-bat" "-attack"
 
@@ -19,5 +19,5 @@ bind "mouse1" "+scatter"
 bind "mouse2" "+pistol"
 bind "mouse3" "+bat"
 
-// for annoyance XD
+// For annoyance XD
 bind "mouse5" "voicemenu 1 4"
