--- a/sniper.cfg
+++ b/sniper.cfg
@@ -12,12 +12,13 @@ echo "=== Sniper config loaded! ==="
 //bind "mouse2" "+scope"
 
 // http://tf2wiki.net/wiki/Sniper_scripts#Sensitivity_Change_on_hold
-// hold alt to temporarily increase adjust sensitivity
+// Hold alt to temporarily increase sensitivity, modify values to your fits
 alias "+sensetoggle" "sensitivity 5"
 alias "-sensetoggle" "sensitivity 3.5"
 bind "alt" "+sensetoggle"
 
 // http://tf2wiki.net/wiki/Sniper_scripts#Quick_Jarate_Switch
+// Quick Jarate or SMG
 alias +jarate "slot2;+attack"
 alias -jarate "-attack;lastinv"
 bind "mouse5" "+jarate"
