* adapted readme * moved sensitivity change on alt to clear.cfg to have it for all classes * fixed conflicting aliases from adapted machinemode for demoman, pyro, engineer and heavy
+ autoshoot for demoman

--- a/clear.cfg
+++ b/clear.cfg
@@ -17,7 +17,11 @@ unbind "mouse5"
 // Undo medic
 unbind "backspace"
 
-// Undo engineer, sniper
-unbind "alt"
+// Undo engineer
+// http://tf2wiki.net/wiki/Sniper_scripts#Sensitivity_Change_on_hold
+// Hold alt to temporarily increase sensitivity, modify values to your fits
+alias "+sensetoggle" "sensitivity 5"
+alias "-sensetoggle" "sensitivity 3.5"
+bind "alt" "+sensetoggle"
 
 echo "BINDS CLEARED"
