--- a/demoman.cfg
+++ b/demoman.cfg
@@ -11,3 +11,9 @@ echo "=== Demoman config loaded! ==="
 //alias "usecharge" "bind mouse2 +charge;echo CHARGE MODE ENABLED.;alias chargetoggle useattack" 
 //alias "useattack" "bind mouse2 +attack2;echo CHARGE MODE DISABLED.;alias chargetoggle usecharge" 
 //bind "mouse5" "chargetoggle"
+
+// Machine Mode from Heavy modified to autoshoot
+alias "startshoot" "-attack;slot3;+attack;alias autoshoot stopshoot"
+alias "stopshoot" "-attack;lastinv;alias autoshoot startshoot"
+alias "autoshoot" "startshoot"
+bind "mouse5" "autoshoot"
