--- a/engineer.cfg
+++ b/engineer.cfg
@@ -14,7 +14,7 @@ alias -quickbuild "bind 1 slot1;bind 2 slot2;bind 3 slot3;bind 4 slot4;"
 bind "alt" "+quickbuild"
 
 // Machine Mode from Heavy modified to autorepair
-alias "startmachine" "-attack;slot3;+attack;alias machinemode stopmachine"
-alias "stopmachine" "-attack;lastinv;alias machinemode startmachine"
-alias "machinemode" "startmachine"
-bind "mouse5" "machinemode"
+alias "startrepair" "-attack;slot3;+attack;alias autorepair stoprepair"
+alias "stoprepair" "-attack;lastinv;alias autorepair startrepair"
+alias "autorepair" "startrepair"
+bind "mouse5" "autorepair"
