--- a/pyro.cfg
+++ b/pyro.cfg
@@ -4,10 +4,10 @@ exec clear
 echo "=== Pyro config loaded! ==="
 
 // Machine Mode from heavy, without crouching
-alias "startmachine" "-attack;+attack;alias machinemode stopmachine"
-alias "stopmachine" "-attack;alias machinemode startmachine"
-alias "machinemode" "startmachine"
-bind "mouse5" "machinemode"
+alias "startfire" "-attack;+attack;alias autofire stopfire"
+alias "stopfire" "-attack;alias autofire startfire"
+alias "autofire" "startfire"
+bind "mouse5" "autofire"
 
 // http://tf2wiki.net/wiki/Pyro_scripts#Wait-independent_Quick-Axtinguish
 // Quick Axtinguish, untested
