--- a/heavyweapons.cfg
+++ b/heavyweapons.cfg
@@ -11,7 +11,7 @@ alias "machinemode" "startmachine"
 bind "mouse5" "machinemode"
 
 // Machine Mode modified for toggling autospin
-alias "startmachine" "+attack2;alias machinemode stopmachine"
-alias "stopmachine" "-attack2;alias machinemode startmachine"
-alias "machinemode" "startmachine"
-bind "mouse2" "machinemode"
+alias "startspin" "+attack2;alias autospin stopspin"
+alias "stopspin" "-attack2;alias autospin startspin"
+alias "autospin" "startspin"
+bind "mouse2" "autospin"
