--- a/demoman.cfg
+++ b/demoman.cfg
@@ -13,7 +13,7 @@ echo "=== Demoman config loaded! ==="
 //bind "mouse5" "chargetoggle"
 
 // Machine Mode from Heavy modified to autoshoot
-alias "startshoot" "-attack;slot3;+attack;alias autoshoot stopshoot"
-alias "stopshoot" "-attack;lastinv;alias autoshoot startshoot"
+alias "startshoot" "-attack;+attack;alias autoshoot stopshoot"
+alias "stopshoot" "-attack;alias autoshoot startshoot"
 alias "autoshoot" "startshoot"
 bind "mouse5" "autoshoot"
