* expanded readme, added notes and random infos * reverted sensitivity change on alt to be only on sniper * changed fake ubercharge to alt on medic, to have panicmelee on mouse3 for consistent gameplay

--- a/clear.cfg
+++ b/clear.cfg
@@ -17,11 +17,7 @@ unbind "mouse5"
 // Undo medic
 unbind "backspace"
 
-// Undo engineer
-// http://tf2wiki.net/wiki/Sniper_scripts#Sensitivity_Change_on_hold
-// Hold alt to temporarily increase sensitivity, modify values to your fits
-alias "+sensetoggle" "sensitivity 5"
-alias "-sensetoggle" "sensitivity 3.5"
-bind "alt" "+sensetoggle"
+// Undo engineer, medic
+unbind "alt"
 
 echo "BINDS CLEARED"
