--- a/medic.cfg
+++ b/medic.cfg
@@ -7,6 +7,6 @@ alias "+ubah" "+attack2;say_team Popped Ubercharge, now kick some ass!;voicemenu
 alias "-ubah" "-attack2"
 
 bind "mouse2" "+ubah"
-bind "mouse3" "voicemenu 1 7;say_team FAKE UBERCHARGE!"
+bind "alt" "voicemenu 1 7;say_team FAKE UBERCHARGE!"
 bind "mouse5" "say_team Ubercharge ready, prepare to push!;voicemenu 2 5"
 bind "backspace" "kill"
