--- a/sniper.cfg
+++ b/sniper.cfg
@@ -11,6 +11,12 @@ echo "=== Sniper config loaded! ==="
 //alias "-scope" "+attack2; wait 5; -attack2"
 //bind "mouse2" "+scope"
 
+// http://tf2wiki.net/wiki/Sniper_scripts#Sensitivity_Change_on_hold
+// Hold alt to temporarily increase sensitivity, modify values to your fits
+alias "+sensetoggle" "sensitivity 5"
+alias "-sensetoggle" "sensitivity 3.5"
+bind "alt" "+sensetoggle"
+
 // http://tf2wiki.net/wiki/Sniper_scripts#Quick_Jarate_Switch
 // Quick Jarate or SMG
 alias +jarate "slot2;+attack"
