* deactivated autospin * adapted readme * uncommented aliases for rocketjump, but still deactivated

--- a/heavyweapons.cfg
+++ b/heavyweapons.cfg
@@ -14,4 +14,4 @@ bind "mouse5" "machinemode"
 alias "startspin" "+attack2;alias autospin stopspin"
 alias "stopspin" "-attack2;alias autospin startspin"
 alias "autospin" "startspin"
-bind "mouse2" "autospin"
+//bind "mouse2" "autospin"
