--- a/pyro.cfg
+++ b/pyro.cfg
@@ -10,10 +10,10 @@ alias "autofire" "startfire"
 bind "mouse5" "autofire"
 
 // http://tf2wiki.net/wiki/Pyro_scripts#Wait-independent_Quick-Axtinguish
-// Quick Axtinguish, untested
+// Quick Axtinguish, only works with flamethrower selected
 //alias melee1 "slot1;+attack"
 //alias melee2 "slot3;+attack; alias -meleekill melee3"
 //alias melee3 "-attack;slot1; alias -meleekill melee2"
 //alias "+meleekill" "melee1"
 //alias "-meleekill" "melee2"
-//bind "SHIFT" "+meleekill"
+//bind "alt" "+meleekill"
