* cosmetics * using movement script now + toggle cl_hud_minmode on ö/semicolon + show net_graph when holding tab

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -9,24 +9,30 @@ exec clear
 //alias "-jumpeh" "-duck;-jump"
 //bind "space" "+jumpeh"
 
+alias "toggle_minmode" "incrementvar cl_hud_minmode 0 1 1"
+bind "semicolon" "toggle_minmode"
+
+alias "+netinfo" "+showscores;net_graph 2"
+alias "-netinfo" "-showscores;net_graph 0"
+bind "tab" "+netinfo"
 
 // http://tf2wiki.net/wiki/Scout_scripts#The_Flank_n.27_Spank_Compilation_by_Shock-
 // Null-cancelling movement script
 // (prevents you from pressing two opposing directions, which causes you to stop moving)
-//alias +mfwd "-back;+forward;alias checkfwd +forward"
-//alias +mback "-forward;+back;alias checkback +back"
-//alias +mleft "-moveright;+moveleft;alias checkleft +moveleft"
-//alias +mright "-moveleft;+moveright;alias checkright +moveright"
-//alias -mfwd "-forward;checkback;alias checkfwd none"
-//alias -mback "-back;checkfwd;alias checkback none"
-//alias -mleft "-moveleft;checkright;alias checkleft none"
-//alias -mright "-moveright;checkleft;alias checkright none"
-//alias checkfwd none
-//alias checkback none
-//alias checkleft none
-//alias checkright none
-//alias none ""
-//bind w +mfwd
-//bind s +mback
-//bind a +mleft
-//bind d +mright
+alias "+mfwd" "-back;+forward;alias checkfwd +forward"
+alias "+mback" "-forward;+back;alias checkback +back"
+alias "+mleft" "-moveright;+moveleft;alias checkleft +moveleft"
+alias "+mright" "-moveleft;+moveright;alias checkright +moveright"
+alias "-mfwd" "-forward;checkback;alias checkfwd none"
+alias "-mback" "-back;checkfwd;alias checkback none"
+alias "-mleft" "-moveleft;checkright;alias checkleft none"
+alias "-mright" "-moveright;checkleft;alias checkright none"
+alias "checkfwd" "none"
+alias "checkback" "none"
+alias "checkleft" "none"
+alias "checkright" "none"
+alias "none" ""
+bind "w" "+mfwd"
+bind "s" "+mback"
+bind "a" "+mleft"
+bind "d" "+mright"
