--- a/pyro.cfg
+++ b/pyro.cfg
@@ -11,9 +11,9 @@ bind "mouse5" "autofire"
 
 // http://tf2wiki.net/wiki/Pyro_scripts#Wait-independent_Quick-Axtinguish
 // Quick Axtinguish, only works with flamethrower selected
-//alias melee1 "slot1;+attack"
-//alias melee2 "slot3;+attack; alias -meleekill melee3"
-//alias melee3 "-attack;slot1; alias -meleekill melee2"
+//alias "melee1" "slot1;+attack"
+//alias "melee2" "slot3;+attack; alias -meleekill melee3"
+//alias "melee3" "-attack;slot1; alias -meleekill melee2"
 //alias "+meleekill" "melee1"
 //alias "-meleekill" "melee2"
 //bind "alt" "+meleekill"
