--- a/sniper.cfg
+++ b/sniper.cfg
@@ -19,6 +19,6 @@ bind "alt" "+sensetoggle"
 
 // http://tf2wiki.net/wiki/Sniper_scripts#Quick_Jarate_Switch
 // Quick Jarate or SMG
-alias +jarate "slot2;+attack"
-alias -jarate "-attack;lastinv"
+alias "+jarate" "slot2;+attack"
+alias "-jarate" "-attack;lastinv"
 bind "mouse5" "+jarate"
