--- a/engineer.cfg
+++ b/engineer.cfg
@@ -5,12 +5,12 @@ echo "=== Engineer config loaded! ==="
 
 // http://tf2wiki.net/wiki/Engineer_scripts#Hold_Shift_to_build
 // quick build/destroy when holding alt
-alias e1 "build 2;destroy 2"
-alias e2 "build 0;destroy 0"
-alias e3 "build 1;destroy 1"
-alias e4 "build 3;destroy 3"
-alias +quickbuild "bind 1 e1;bind 2 e2;bind 3 e3;bind 4 e4; echo Sentry:1 Dispenser:2 Entrance:3 Exit:4;"
-alias -quickbuild "bind 1 slot1;bind 2 slot2;bind 3 slot3;bind 4 slot4;"
+alias "e1" "build 2;destroy 2"
+alias "e2" "build 0;destroy 0"
+alias "e3" "build 1;destroy 1"
+alias "e4" "build 3;destroy 3"
+alias "+quickbuild" "bind 1 e1;bind 2 e2;bind 3 e3;bind 4 e4; echo Sentry:1 Dispenser:2 Entrance:3 Exit:4;"
+alias "-quickbuild" "bind 1 slot1;bind 2 slot2;bind 3 slot3;bind 4 slot4;"
 bind "alt" "+quickbuild"
 
 // Machine Mode from Heavy modified to autorepair
