--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -9,6 +9,10 @@ exec clear
 //alias "-jumpeh" "-duck;-jump"
 //bind "space" "+jumpeh"
 
+alias "netgood" "cl_cmdrate 66;cl_interp 0;cl_interp_ratio 1;cl_lagcompensation 1;cl_pred_optimize 2;cl_smooth 0;cl_smoothtime 0.01;cl_updaterate 66;rate 60000"
+alias "netbad" "cl_cmdrate 40;cl_interp 0;cl_interp_ratio 2;cl_lagcompensation 1;cl_pred_optimize 2;cl_smooth 0;cl_smoothtime 0.01;cl_updaterate 40;rate 35000"
+netbad
+
 alias "toggle_minmode" "incrementvar cl_hud_minmode 0 1 1"
 bind "semicolon" "toggle_minmode"
 
