--- a/medic.cfg
+++ b/medic.cfg
@@ -3,10 +3,13 @@ exec clear
 say_team "=== Medic config loaded! ==="
 echo "=== Medic config loaded! ==="
 
-alias "+ubah" "+attack2;say_team Popped Ubercharge, now kick some ass!;voicemenu 2 5"
+alias "+ubah" "+attack2;say_team Popped Ubercharge, now kick some ass!;voicemenu 2 1"
 alias "-ubah" "-attack2"
+alias "+medicradar" "hud_medicautocallersthreshold 150"
+alias "-medicradar" "hud_medicautocallersthreshold 66"
 
 bind "mouse2" "+ubah"
 bind "alt" "voicemenu 1 7;say_team FAKE UBERCHARGE!"
-bind "mouse5" "say_team Ubercharge ready, prepare to push!;voicemenu 2 5"
+bind "mouse5" "say_team Ubercharge ready, prepare to push!;voicemenu 2 1"
 bind "backspace" "kill"
+bind "ctrl" "+medicradar"
