* more elegant binding for the minmode toggle

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -13,8 +13,7 @@ alias "netgood" "cl_cmdrate 66;cl_interp 0;cl_interp_ratio 1;cl_lagcompensation 
 alias "netbad" "cl_cmdrate 40;cl_interp 0;cl_interp_ratio 2;cl_lagcompensation 1;cl_pred_optimize 2;cl_smooth 0;cl_smoothtime 0.01;cl_updaterate 40;rate 35000"
 netbad
 
-alias "toggle_minmode" "incrementvar cl_hud_minmode 0 1 1"
-bind "semicolon" "toggle_minmode"
+bindtoggle "semicolon" "cl_hud_minmode"
 
 alias "+netinfo" "+showscores;net_graph 2"
 alias "-netinfo" "-showscores;net_graph 0"
