--- a/spy.cfg
+++ b/spy.cfg
@@ -8,3 +8,17 @@ echo "=== Spy config loaded! ==="
 alias "+autosap" "slot2;+attack"
 alias "-autosap" "-attack;lastinv"
 bind "mouse5" "+autosap"
+
+// Quick disguise, untested
+//alias "d1" "disguise 1 -1"
+//alias "d2" "disguise 2 -1"
+//alias "d3" "disguise 3 -1"
+//alias "d4" "disguise 4 -1"
+//alias "d5" "disguise 5 -1"
+//alias "d6" "disguise 6 -1"
+//alias "d7" "disguise 7 -1"
+//alias "d8" "disguise 8 -1"
+//alias "d9" "disguise 9 -1"
+//alias "+quickdisguise" "bind 1 d1;bind 2 d2;bind 3 d3;bind 4 d4;bind 5 d5;bind 6 d6;bind 7 d7;bind 8 d8;bind 9 d9"
+//alias "-quickdisguise" "bind 1 slot1;bind 2 slot2;bind 3 slot3;bind 4 slot4;bind 5 slot5;bind 6 slot6;bind 7 slot7;bind 8 slot8;bind 9 slot9"
+//bind "alt" "+quickdisguise"
