* fixed not being able to show scores after server join by binding netgraph to a separate key * fixed toggle cl_minmode not working * readme updates

--- a/clear.cfg
+++ b/clear.cfg
@@ -11,18 +11,16 @@ alias "+panicmelee" "slot3;+attack"
 alias "-panicmelee" "-attack;lastinv"
 bind "mouse3" "+panicmelee"
 
-// Undo engineer, heavy, medic, pyro, scout, sniper, soldier, spy
+// Undo engineer, heavy, medic, pyro, scout, sniper, spy
 unbind "mouse5"
 
 // Undo medic
 unbind "backspace"
 
-// Undo engineer, medic
+// Undo engineer, medic, soldier
 unbind "alt"
 
 //Undo medic
 unbind "ctrl"
-
-unbind "semicolon"
 
 echo "BINDS CLEARED"
