--- a/soldier.cfg
+++ b/soldier.cfg
@@ -8,4 +8,4 @@ alias "+rocketjump" "+jump;+duck;+attack"
 alias "-rocketjump" "-attack;-duck;-jump"
 //bind "mouse2" "+rocketjump"
 
-bind "mouse5" "say_team === ENEMY MEDIC DOWN! ===;voicemenu 0 2"
+bind "alt" "say_team === ENEMY MEDIC DOWN! ===;voicemenu 0 2"
