--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -15,9 +15,10 @@ netbad
 
 bindtoggle "semicolon" "cl_hud_minmode"
 
-alias "+netinfo" "+showscores;net_graph 2"
-alias "-netinfo" "-showscores;net_graph 0"
-bind "tab" "+netinfo"
+alias "netinfo" "netinfoshow"
+alias "netinfoshow" "net_graph 2;alias netinfo netinfohide"
+alias "netinfohide" "net_graph 0;alias netinfo netinfoshow"
+bind "]" "netinfo"
 
 // http://tf2wiki.net/wiki/Scout_scripts#The_Flank_n.27_Spank_Compilation_by_Shock-
 // Null-cancelling movement script
