+ added two aliases for eve hud's server shortcut bottons

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -40,3 +40,7 @@ bind "w" "+mfwd"
 bind "s" "+mback"
 bind "a" "+mleft"
 bind "d" "+mright"
+
+// For eve hud
+alias "ServerShortcut1" "connect 5.45.103.104:27015"
+alias "ServerShortcut2" "connect 85.214.255.228:27015"
